--- a/src/routes/admin/avisos.ejs
+++ b/src/routes/admin/avisos.ejs
@@ -16,7 +16,7 @@
                     <div class="Input--Container">
                         <span>Nuevo reporte</span>
                         <div class="Input">
-                            <input type="text" placeholder="Escribir el reporte" required name="descripcion" id="Descripcion">
+                            <input type="text" placeholder="Escribir el reporte" required name="descripcion" id="Descripcion" maxlength="100">
                             <img src="/images/icons/Cancel.png" alt="icon" id="Borrar">
                         </div>
                     </div>
@@ -29,11 +29,11 @@
                             <option value="Producto">Producto</option>
                         </select>
                     </div>
-                    <div class="Fecha--reporte">
-                        <input type="date" required name="fecha">
+                    <div class="Fecha--reporte" id="Border">
+                        <input type="date" required name="fecha" id="Fecha--aviso">
                     </div>
                     
-                    <button value="Crear Aviso" type="submit">Crear Aviso</button>
+                    <button value="Crear Aviso" type="submit" id="Aviso">Crear Aviso</button>
                 </form>
             </article>
             <article class="Table--Container">
