--- a/public/css/admin/dashboard.css
+++ b/public/css/admin/dashboard.css
@@ -107,6 +107,14 @@ main .Avisos--panel  table tr{
     font-weight: 700;
     letter-spacing: 1.5px;
 }
+main .Avisos--panel table tr{
+    transition: .1s linear;
+}
+main .Avisos--panel table tr:hover{
+    background-color: var(--ColorNavigatorBar);
+    color: var(--PrimaryColor);
+    cursor: pointer;
+}
 main .Avisos--panel  table td{
     font-size: 1.1em;
     border-bottom: 1px solid #aaa;
