--- a/src/layouts/Landing/section/index.html
+++ b/src/layouts/Landing/section/index.html
@@ -125,6 +125,7 @@
         <ul class="productSection">
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -133,6 +134,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -141,6 +143,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -149,6 +152,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -157,6 +161,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -165,6 +170,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -173,6 +179,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -181,6 +188,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -189,6 +197,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -197,6 +206,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -205,6 +215,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -213,6 +224,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -221,6 +233,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -229,6 +242,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
