--- a/src/layouts/Landing/product/index.html
+++ b/src/layouts/Landing/product/index.html
@@ -146,6 +146,7 @@
         <ul class="productSection">
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -154,6 +155,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -162,6 +164,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -170,6 +173,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
@@ -178,6 +182,7 @@
             </li>
             <li>
                 <div class="productView">
+                    <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                     <input type="number" class="productCant">
                     <button>Agregar</button>
                 </div>
