--- a/src/layouts/Landing/pago/styles.css
+++ b/src/layouts/Landing/pago/styles.css
@@ -1,12 +1,14 @@
 .arrows{
     display: flex;
     flex-direction: row;
-    width: 90dvw;
+    justify-content: center;
+    width: 100dvw;
+    height: 15dvh;
 }
 
 .arrow{
     width: 20%;
     height: 100%;
-    clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+    clip-path: polygon(91% 0, 100% 50%, 90% 100%, 0% 100%, 8% 52%, 0% 0%);
     background-color: red;
 }
