--- a/src/layouts/Landing/Main/index.html
+++ b/src/layouts/Landing/Main/index.html
@@ -167,6 +167,7 @@
                 <ul class="productSection">
                     <li>
                         <div class="productView">
+                            <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -175,6 +176,7 @@
                     </li>
                     <li>
                         <div class="productView">
+                            <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -183,6 +185,7 @@
                     </li>
                     <li>
                         <div class="productView">
+                            <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -191,6 +194,7 @@
                     </li>
                     <li>
                         <div class="productView">
+                            <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -199,6 +203,7 @@
                     </li>
                     <li>
                         <div class="productView">
+                            <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -212,6 +217,7 @@
                 <ul class="productSection">
                     <li>
                         <div class="productView">
+                            <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -220,6 +226,7 @@
                     </li>
                     <li>
                         <div class="productView">
+                            <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -228,6 +235,7 @@
                     </li>
                     <li>
                         <div class="productView">
+                            <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -236,6 +244,7 @@
                     </li>
                     <li>
                         <div class="productView">
+                            <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -244,6 +253,7 @@
                     </li>
                     <li>
                         <div class="productView">
+                            <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
