--- a/src/layouts/Landing/Main/index.html
+++ b/src/layouts/Landing/Main/index.html
@@ -122,6 +122,7 @@
                     <ul class="productSection">
                         <li>
                             <div class="productView">
+                                <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                                 <input type="number" class="productCant">
                                 <button>Agregar</button>
                             </div>
@@ -130,6 +131,7 @@
                         </li>
                         <li>
                             <div class="productView">
+                                <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                                 <input type="number" class="productCant">
                                 <button>Agregar</button>
                             </div>
@@ -138,6 +140,7 @@
                         </li>
                         <li>
                             <div class="productView">
+                                <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                                 <input type="number" class="productCant">
                                 <button>Agregar</button>
                             </div>
@@ -146,6 +149,7 @@
                         </li>
                         <li>
                             <div class="productView">
+                                <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                                 <input type="number" class="productCant">
                                 <button>Agregar</button>
                             </div>
@@ -154,6 +158,7 @@
                         </li>
                         <li>
                             <div class="productView">
+                                <img class="productImg" src="../../../../public/images/Licores/aguardiente-canaclara.png">
                                 <input type="number" class="productCant">
                                 <button>Agregar</button>
                             </div>
