adding arrows inner text

--- a/src/layouts/Landing/pago/index.html
+++ b/src/layouts/Landing/pago/index.html
@@ -110,10 +110,22 @@
 
     <main>
         <section class="arrows">
-            <div class="arrow"></div>
-            <div class="arrow"></div>
-            <div class="arrow"></div>
-            <div class="arrow"></div>
+            <div class="arrow">
+                <h3>Paso 1</h3>
+                <p>Direccion de envio</p>
+            </div>
+            <div class="arrow">
+                <h3>Paso 2</h3>
+                <p>Tipo de envio</p>
+            </div>
+            <div class="arrow">
+                <h3>Paso 3</h3>
+                <p>Facturación</p>
+            </div>
+            <div class="arrow">
+                <h3>Paso 4</h3>
+                <p>Registra tu pago</p>
+            </div>
         </section>
     </main>
 
