--- a/src/layouts/Landing/pay/index.html
+++ b/src/layouts/Landing/pay/index.html
@@ -110,13 +110,13 @@
 
     <main>
         <section class="arrows">
-            <div class="arrow">
+            <div class="arrow selected">
                 <h3>Paso 1</h3>
-                <p>Direccion de envio</p>
+                <p>Dirección de envío</p>
             </div>
             <div class="arrow">
                 <h3>Paso 2</h3>
-                <p>Tipo de envio</p>
+                <p>Tipo de envío</p>
             </div>
             <div class="arrow">
                 <h3>Paso 3</h3>
@@ -126,6 +126,10 @@
                 <h3>Paso 4</h3>
                 <p>Registra tu pago</p>
             </div>
+        </section>
+
+        <section class="first-step">
+
         </section>
     </main>
 
