--- a/src/routes/partials/product.ejs
+++ b/src/routes/partials/product.ejs
@@ -1,5 +1,6 @@
 <li>
     <div class="productView">
+        <img class="productImg" src="">
         <input type="number" class="productCant">
         <button onclick="addProduct()">Agregar</button>
     </div>
