Actualizando Carrito en cuando agrega nuevo elemento

--- a/src/routes/partials/product.ejs
+++ b/src/routes/partials/product.ejs
@@ -22,6 +22,7 @@
             imagen: '<%= producto.imagen %>'
         }));
 
+        document.getElementById('cart-length').innerText = localStorage.length;
         console.log(localStorage.getItem(producto));
     }
 </script>
