--- a/src/routes/partials/cart.ejs
+++ b/src/routes/partials/cart.ejs
@@ -28,6 +28,7 @@
             let key = localStorage.key(i);
             let product = JSON.parse(localStorage.getItem(key));
             let li = document.createElement('li');
+            console.log(product)
             li.innerHTML = `
                 <input readonly type="number" class="productCant" value="${product.cantidad}">
                 <img class="productImage" src="${product.imagen}">
@@ -56,8 +57,6 @@
         alert('Carrito vaciado');
     }
 
-    cargarCarrito();
-
     document.addEventListener('DOMContentLoaded', async () => {
         const response = await fetch("https://ve.dolarapi.com/v1/dolares/oficial")
         const data = await response.json()
@@ -78,6 +77,8 @@
 
         document.querySelector('#total-cart').innerText = `Total($): ${total.toFixed(2)}`;
         document.querySelector('#totalbs-cart').innerText = `Total(Bs): ${totalBs.toFixed(2)}`;
+
+        
 
     });
 
