Busqueda del Producto Completada

--- a/src/routes/partials/cart.ejs
+++ b/src/routes/partials/cart.ejs
@@ -59,6 +59,7 @@
         let cart = document.querySelector('aside ul');
         cart.innerHTML = '';
         alert('Carrito vaciado');
+        cargarDolar();
     }
 
     //Funcion asincronca para cargar la api de Dolar y el dolar Promedio
