--- a/src/layouts/Landing/pay/index.html
+++ b/src/layouts/Landing/pay/index.html
@@ -129,7 +129,17 @@
         </section>
 
         <section class="first-step">
-
+            <div class="subcontainer selected-container">
+                <img class="check" src="../../../../public/images/icons/checkfill.svg">
+                <h3 class="container-title">Delivery</h3>
+                <p class="container-content">Seleccione esta opcion si quieres que enviemos tu pedido con uno de nuestros Zoneros</p>
+            </div>
+            <div class="subcontainer">
+                <img class="check" src="../../../../public/images/icons/checkunfill.svg">
+                <h3 class="container-title">Pick up/Retirar en local</h3>
+                <p class="container-content">Seleccione esta opcion si quieres buscar tu pedido en nuestra Zona Pick Up</p>
+            </div>
+            <div class="big-container"></div>
         </section>
     </main>
 
