--- a/src/layouts/Landing/pay/styles.css
+++ b/src/layouts/Landing/pay/styles.css
@@ -35,3 +35,64 @@
     width: 40%;
     text-align: center;
 }
+
+.first-step{
+    margin-top: 2vmin;
+    width: 100dvw;
+    height: 68dvh;
+    display: grid;
+    grid-template-columns: repeat(2,25dvw);
+    grid-template-rows: repeat(3,15dvh);
+    justify-content: center;
+    column-gap: 1vmin;
+    gap: 6vmin;
+}
+
+.subcontainer{
+    background-color: #EBEBEB;
+    border-radius: 15px;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-row: 1fr 1fr;
+    grid-auto-rows: 50%;
+    cursor: pointer;
+    color: #040C5D;
+}
+
+.container-content{
+    grid-column-start: 2;
+    grid-column-end: 5;
+    font-size: 1.5vmin;
+    margin: 0;
+    margin-right: 1vmin;
+}
+
+.big-container{
+    background-color: #EBEBEB;
+    border-radius: 15px;
+    width: 100%;
+    height: 100%;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    display: grid;
+    
+}
+
+.selected-container{
+    background-color: #040C5D;
+    color: white;
+}
+
+.container-title{
+    font-weight: normal;
+    align-self: center;
+}
+
+.check{
+    align-self: center;
+    justify-self: center;
+}
