--- a/src/layouts/Landing/pay/first-step.html
+++ b/src/layouts/Landing/pay/first-step.html
@@ -139,7 +139,14 @@
                 <h3 class="container-title">Pick up/Retirar en local</h3>
                 <p class="container-content">Seleccione esta opcion si quieres buscar tu pedido en nuestra Zona Pick Up</p>
             </div>
-            <div class="big-container"></div>
+            <div class="big-container">
+                <h2 style="grid-column: 1/5; margin-left: 3vmin;">Alejandro Chávez • 0000000000 • 32278392</h2>
+                <img src="../../../../public/images/icons/edit.svg" style="grid-column: 5 / 5; justify-self: center;align-self: center; cursor: pointer;">
+                <p style="grid-row: 2/2; grid-column: 1/5; margin-left: 3vmin;">Carabobo • Naguanagua • Los Guayabitos</p>
+                <p style="grid-row: 3/3; grid-column: 1/5; margin-left: 3vmin;">Residencias el Saman, edif azul con blanco, porton negro, justo al frente del restaurante club guayabal</p>
+                <p style="grid-row: 4/4; grid-column: 1/4; color: red; margin-left: 3vmin;">Sin geolocalización incluida</p>
+                <button class="button-siguiente" style="grid-row: 4/4; grid-column: 5/5; margin-left: 3vmin;">Siguiente</button>
+            </div>
         </section>
     </main>
 
